--- a/frontend/src/locales/ro/common.json
+++ b/frontend/src/locales/ro/common.json
@@ -3,8 +3,7 @@
     "ro": "Română",
     "roles": {
         "STUDENT": "student",
-        "TEACHER": "profesor",
-        "SECRETARY": "secretară"
+        "TEACHER": "profesor"
     },
     "domains": {
         "INFO": "Informatică",
@@ -87,6 +86,26 @@
                     "label": "Role",
                     "placeholder": "Role",
                     "errorMessage": "Please provide a role for the user"
+                },
+                "domain": {
+                    "label": "Domain",
+                    "placeholder": "Domain",
+                    "errorMessage": "Please select a domain"
+                },
+                "learningMode": {
+                    "label": "Learning Mode",
+                    "placeholder": "Learning Mode",
+                    "errorMessage": "Please select a learning mode"
+                },
+                "degree": {
+                    "label": "Degree",
+                    "placeholder": "Degree",
+                    "errorMessage": "Please select a degree"
+                },
+                "studyProgram": {
+                    "label": "Study Program",
+                    "placeholder": "Study Program",
+                    "errorMessage": "Please select a study program"
                 }
             },
             "inputFields": {
@@ -99,7 +118,48 @@
                     "label": "Last Name",
                     "placeholder": "Last Name",
                     "errorMessage": "Please provide the user's last name"
+                },
+                "currentGroup": {
+                    "label": "Current Group",
+                    "placeholder": "Current Group",
+                    "errorMessage": "Please provide the student's current group"
+                },
+                "currentYear": {
+                    "label": "Current Year",
+                    "placeholder": "Current Year",
+                    "errorMessage": "Please provide the student's current year"
                 }
+            }
+        },
+        "course": {
+            "inputFields": {
+                "title": {
+                    "label": "Title",
+                    "placeholder": "Title",
+                    "errorMessage": "Please provide a title for the course"
+                },
+                "capacity": {
+                    "label": "Capacity",
+                    "placeholder": "Capacity",
+                    "errorMessage": "Please provide the capacity for the course. It must be between 1 and 100"
+                },
+                "link": {
+                    "label": "Link",
+                    "placeholder": "Link",
+                    "errorMessage": "Please provide a link for the course"
+                }    
+            },
+            "dropDownFields": {
+                "teacher": {
+                    "label": "Teacher",
+                    "placeholder": "Teacher",
+                    "errorMessage": "Please choose a teacher for the course"
+                }
+            },
+            "submitButtons": {
+                "create": "Create a new course",
+                "update": "Update the course's info",
+                "delete": "Delete the course"
             }
         }
     },
@@ -116,6 +176,12 @@
                 "email": "Email"    
             },
             "sheetName": "Studenți Înscriși"    
+        },
+        "courses": {
+            "header": {
+                "title": "Title",
+                "teacher": "Teacher"
+            }
         }
     },
     "registration": {
@@ -235,22 +301,15 @@
         "teacherLinks": {
             "courses": "Cursuri"
         },
-        "secretaryLinks": {
-            "accounts": "Conturi Studenti"
-        },
         "adminLinks": {
             "optionsLists": "Liste Opționale",
-            "cursuri": "Cursuri",
-            "accounts": {
-                "notVerified": "Conturi Neverificate",
-                "students": "Conturi studenți",
-                "teachers": "Conturi profesori",
-                "secretaries": "Conturi secretare"
-            }
+            "courses": "Cursuri",
+            "accounts": "Conturi"
         },
         "facultyName": "Facultatea de Matematică și Informatică",
         "displayMessage": {
             "morning": "Neața",
+            "afternoon": "Zi faină",
             "night": "Seară faină"
         }
     },
@@ -286,25 +345,77 @@
         ]
     },
     "pages": {
+        "registration": {
+            "codes": {
+                "NO_PASSWORD_OR_EMAIL_PROVIDED": "Please provide both a password and an email",
+                "ALREADY_REGISTERED": "You are already registered",
+                "SUCCESS": "Your account was created succesfully. Once your account is verified, you will be notified by email"
+            }
+        },
+        "login": {
+            "codes": {
+                "NO_PASSWORD_OR_EMAIL_PROVIDED": "Please provide both a password and an email",
+                "INVALID_CREDENTIALS": "The password or the email were wrong",
+                "ACCOUNT_NOT_VERIFIED": "Your account wasn`t verified yet. You will receive an email as soon as your account is verified.",
+                "PASSWORD_NOT_CHANGED": "Please reset your password before logging in for the first time",
+                "SUCCESS": "SUCCESS"
+            }
+        },
+        "loading": {
+            "quotes": [
+                {
+                    "text": "Education is the passport to the future, for tomorrow belongs to those who prepare for it today.",
+                    "author": "Malcom X"
+                },
+                {
+                    "text": "What would life be if we had no courage to attempt anything?",
+                    "author": "Vincent Van Gogh"
+                }
+            ]
+        },
+        "profile": {
+            "personalData": "Personal Data",
+            "profile": "Profile",
+            "profileDataFields": {
+                "email": "E-mail",
+                "name": "Full Name"
+            },
+            "studentDataFields": {
+                "domain": "Domain",
+                "learningMode": "Learning Mode",
+                "degree": "Degree",
+                "studyProgram": "Study Program",
+                "currentGroup": "Current Group",
+                "currentYear": "Current Year",
+                "currentSemester": "Current Semester"
+            },
+            "studentData": "Student Data",
+            "grade": "Grades",
+            "studentGradeFields": {
+                "yearHeader": "Year",
+                "gradeHeader": "Grade"
+            }
+        },
         "optionsLists": {
             "createButton": "Create a new options list"
         },
         "accounts": {
             "notVerified": {
-                "accountsListTitle": "",
+                "accountsListTitle": "Not Verified",
                 "fileUploadLabel": ""
             },
             "students": {
-                "accountsListTitle": "",
-                "fileUploadLabel": ""
+                "accountsListTitle": "Students",
+                "fileUploadLabel": "Upload students' info excel file"
             },
             "teachers": {
-                "accountsListTitle": "",
-                "fileUploadLabel": ""
-            },
-            "secretaries": {
-                "accountsListTitle": "",
-                "fileUploadLabel": ""
+                "accountsListTitle": "Teachers",
+                "fileUploadLabel": "Upload teachers' info excel file"
+            }
+        },
+        "adminCourses": {
+            "buttons": {
+                "create": "Create a new course"
             }
         }
     },
