--- a/frontend/src/locales/ro/common.json
+++ b/frontend/src/locales/ro/common.json
@@ -36,501 +36,14 @@
     "MATE": "Matematică",
     "MA": "Matematici Aplicate"
   },
-  "forms": {
-    "optionsList": {
-      "dropDownFields": {
-        "domain": {
-          "label": "Domain",
-          "placeholder": "Domain",
-          "errorMessage": "Please select a domain"
-        },
-        "learningMode": {
-          "label": "Learning Mode",
-          "placeholder": "Learning Mode",
-          "errorMessage": "Please select a learning mode"
-        },
-        "degree": {
-          "label": "Degree",
-          "placeholder": "Degree",
-          "errorMessage": "Please select a degree"
-        },
-        "studyProgram": {
-          "label": "Study Program",
-          "placeholder": "Study Program",
-          "errorMessage": "Please select a study program"
-        }
-      },
-      "inputFields": {
-        "title": {
-          "label": "Title",
-          "placeholder": "Title",
-          "errorMessage": "Please provide a title for the options list"
-        },
-        "year": {
-          "label": "Year",
-          "placeholder": "Year",
-          "errorMessage": "Please provide a year for the options list"
-        },
-        "semester": {
-          "label": "Semester",
-          "placeholder": "Semester",
-          "errorMessage": "Please provide a semester for the options list"
-        }
-      },
-      "submitButtons": {
-        "create": "Create the options list",
-        "update": "Update the options list",
-        "delete": "Delete the options list"   
-      }
-    },
-    "userData": {
-      "dropDownFields": {
-        "role": {
-          "label": "Role",
-          "placeholder": "Role",
-          "errorMessage": "Please provide a role for the user"
-        },
-        "domain": {
-          "label": "Domain",
-          "placeholder": "Domain",
-          "errorMessage": "Please select a domain"
-        },
-        "learningMode": {
-          "label": "Learning Mode",
-          "placeholder": "Learning Mode",
-          "errorMessage": "Please select a learning mode"
-        },
-        "degree": {
-          "label": "Degree",
-          "placeholder": "Degree",
-          "errorMessage": "Please select a degree"
-        },
-        "studyProgram": {
-          "label": "Study Program",
-          "placeholder": "Study Program",
-          "errorMessage": "Please select a study program"
-        }
-      },
-      "inputFields": {
-        "firstName": {
-          "label": "First Name",
-          "placeholder": "First Name",
-          "errorMessage": "Please provide the user's first name"
-        },
-        "lastName": {
-          "label": "Last Name",
-          "placeholder": "Last Name",
-          "errorMessage": "Please provide the user's last name"
-        },
-        "currentGroup": {
-          "label": "Current Group",
-          "placeholder": "Current Group",
-          "errorMessage": "Please provide the student's current group"
-        },
-        "currentYear": {
-          "label": "Current Year",
-          "placeholder": "Current Year",
-          "errorMessage": "Please provide the student's current year"
-        }
-      },
-      "submitButtons": {
-        "verifyUser": "Verify the User",
-        "student": "Update the student's info",
-        "teacher": "Update the teacher's info",
-        "delete": "Delete the account"
-      }
-    },
-    "course": {
-      "inputFields": {
-        "title": {
-          "label": "Title",
-          "placeholder": "Title",
-          "errorMessage": "Please provide a title for the course"
-        },
-        "capacity": {
-          "label": "Capacity",
-          "placeholder": "Capacity",
-          "errorMessage": "Please provide the capacity for the course. It must be between 1 and 100"
-        },
-        "link": {
-          "label": "Link",
-          "placeholder": "Link",
-          "errorMessage": "Please provide a link for the course"
-        },
-        "semester": {
-          "label": "Semester",
-          "placeholder": "Semester",
-          "errorMessage": "Please provide the semester for the course. It must be either 1 or 2"
-        }  
-      },
-      "dropDownFields": {
-        "teacher": {
-          "label": "Teacher",
-          "placeholder": "Teacher",
-          "errorMessage": "Please choose a teacher for the course"
-        }
-      },
-      "submitButtons": {
-        "create": "Create a new course",
-        "update": "Update the course",
-        "delete": "Delete the course"
-      }
-    },
-    "sendAnnouncement": {
-      "inputFields": {
-        "subject": {
-          "label": "Subject",
-          "placeholder": "Subject",
-          "errorMessage": "Please provide a subject for the announcement"
-        }
-      },
-      "textAreaFields": {
-        "message": {
-          "label": "Message"
-        }
-      },
-      "submitButtons": {
-        "sendTheAnnouncement": "Send the announcement"
-      }
-    },
-    "login": {
-      "inputFields": {
-        "email": {
-          "placeholder": "Email",
-          "label": "Email"
-        },
-        "password": {
-          "placeholder": "Parolă",
-          "label": "Parolă"
-        }
-      },
-      "forgotPassword": "Ți-ai uitat parola?",
-      "newUser": {
-        "text": "Utilizator nou? Crează-ți cont ",
-        "link": "Aici" 
-      },       
-      "submitButtons": {
-        "signIn": "Loghează-te"
-      }
-    },
-    "registration": {
-      "inputFields": {
-        "email": {
-          "placeholder": "Email",
-          "errorMessage": "Introduceți o adresă validă de email",
-          "label": "Email"
-        },
-        "password": {
-          "placeholder": "Parolă",
-          "errorMessage": "Parola trebuie să conțină măcar o literă mică, o literă mare, și o cifră",
-          "label": "Parolă"
-        },
-        "confirmPassword": {
-          "placeholder": "Confirmă Parola",
-          "errorMessage": "Parolele trebuie să fie identice",
-          "label": "Confirmă Parola"
-        }
-      },
-      "alreadyAnUser": {
-        "text": "Ai deja cont? Loghează-te ",
-        "link": "Aici"
-      },
-      "submitButtons": {
-        "signUp": "Crează-ți cont"
-      }
-    },
-    "recoverAccount": {
-      "inputFields": {
-        "email": {
-          "placeholder": "Email",
-          "errorMessage": "Introduceți o adresă validă de email",
-          "label": "Email"
-        }
-      },
-      "submitButtons": {
-        "sendInstructions": "Trimite Instrucțiuni"
-      }
-    }, 
-    "resetPassword": {
-      "inputFields": {
-        "password": {
-          "placeholder": "Parolă",
-          "errorMessage": "Parola trebuie să conțină măcar o literă mică, o literă mare, și o cifră",
-          "label": "Parolă"
-        },
-        "confirmPassword": {
-          "placeholder": "Confirmă Parola",
-          "errorMessage": "Parolele trebuie să fie identice",
-          "label": "Confirmă Parola"
-        }
-      },
-      "submitButtons": {
-        "resetPassword": "Resetează parola"
-      }
-    }
+  "buttons": {
+    "syllabus": "Vezi fișa disciplinei",
+    "save": "Salvează modificările",
+    "excel": "Exportă ca .xlsx"
   },
-  "lists": {
-    "accounts": {
-      "header": {
-        "email": "Email"
-      }  
-    },
-    "students": {
-      "header": {
-        "name": "Nume și Prenume",
-        "email": "Email"  
-      },
-      "sheetName": "Studenți Înscriși"  
-    },
-    "courses": {
-      "header": {
-        "title": "Denumire",
-        "teacher": "Profesor"
-      },
-      "buttons": {
-        "create": "Adaugă un curs nou"
-      }
-    }
-  },
-  "registration": {
-    "codes": {
-      "NO_PASSWORD_OR_EMAIL_PROVIDED": "Please provide both a password and an email",
-      "ALREADY_REGISTERED": "You are already registered",
-      "SUCCESS": "Your account was created succesfully. Once your account is verified, you will be notified by email"
-    },
-    "form": {
-      "email": {
-        "placeholder": "Email",
-        "errorMessage": "Text",
-        "label": "Email"
-      },
-      "password": {
-        "placeholder": "Parolă",
-        "errorMessage": "Text",
-        "label": "Parolă"
-      },
-      "confirmPassword": {
-        "placeholder": "Confirmă Parola",
-        "errorMessage": "Text",
-        "label": "Confirmă Parola"
-      },
-      "button": {
-        "label": "Crează-ți cont"
-      },
-      "alreadyAnUser": "Ai deja cont? Loghează-te ",
-      "alreadyAnUserLink": "Aici"
-    }
-  },
-  "login": {
-    "codes": {
-      "NO_PASSWORD_OR_EMAIL_PROVIDED": "Please provide both a password and an email",
-      "INVALID_CREDENTIALS": "The password or the email is wrong",
-      "ACCOUNT_NOT_VERIFIED": "Your account wasn`t verified yet. You will receive an email as soon as your account is verified.",
-      "PASSWORD_NOT_CHANGED": "Please reset your password before logging in for the first time",
-      "SUCCESS": "SUCCESS"
-    },
-    "form": {
-      "email": {
-        "placeholder": "Email",
-        "errorMessage": "Text",
-        "label": "Email"
-      },
-      "password": {
-        "placeholder": "Parolă",
-        "errorMessage": "Text",
-        "label": "Parolă"
-      },
-      "forgotPassword": "Ți-ai uitat parola?",
-      "button": {
-        "label": "Loghează-te"
-      },
-      "newUser": "Utilizator nou? Crează-ți cont ",
-      "newUserLink": "Aici"
-    }
-  },
-  "profile": {
-    "personalData": "Date personale",
-    "profile": "Profil",
-    "profileDataFields": {
-      "email": "E-mail",
-      "name": "Nume și Prenume"
-    },
-    "studentDataFields": {
-      "domain": "Domeniu",
-      "learningMode": "Forma de Învățământ",
-      "degree": "Ciclul de Studii",
-      "studyProgram": "Programul de Studiu",
-      "currentGroup": "Grupa Curentă",
-      "currentYear": "An Curent",
-      "currentSemester": "Semestrul Curent"
-    },
-    "studentData": "Date Student",
-    "grade": "Note",
-    "studentGradeFields": {
-      "yearHeader": "An",
-      "gradeHeader": "Media Aritmetică"
-    }
-  },
-  "sidenav": {
-    "links": {
-      "signOut": "Deconectează-te",
-      "personalData": "Date personale"
-    },
-    "studentLinks": {
-      "courses": "Cursuri"
-    },
-    "teacherLinks": {
-      "courses": "Cursuri"
-    },
-    "adminLinks": {
-      "settings": "Setări",
-      "optionsLists": "Liste Opționale",
-      "courses": "Cursuri",
-      "accounts": "Conturi"
-    },
-    "facultyName": "Facultatea de Matematică și Informatică",
-    "displayMessage": {
-      "morning": "Neața",
-      "afternoon": "Zi faină",
-      "night": "Seară faină"
-    }
-  },
-  "teacher": {
-    "courses": {
-      "mailButton": "Trimite un anunț"
-    }
-  },
-  "studentsList": {
-    "header": {
-      "name": "Nume și Prenume",
-      "email": "Email"  
-    },
-    "sheetName": "Studenți Înscriși"
-  },
-  "accountsList": {
-    "header": {
-      "email": "Email",
-      "role": "Rol",
-      "status": "Status"
-    }
-  },
-  "loadingPage": {
-    "quotes": [
-      {
-        "text": "Educația este pașaportul către viitor, deoarece ziua de mâine aparține celor care se pregătesc pentru ea astăzi.",
-        "author": "Malcom X"
-      },
-      {
-        "text": "Ce ar fi viaţa dacă nu am avea curajul să riscăm ceva?",
-        "author": "Vincent Van Gogh"
-      }
-    ]
-  },
-  "pages": {
-    "registration": {
-      "codes": {
-        "NO_PASSWORD_OR_EMAIL_PROVIDED": "Please provide both a password and an email",
-        "ALREADY_REGISTERED": "You are already registered",
-        "SUCCESS": "Your account was created succesfully. Once your account is verified, you will be notified by email"
-      }
-    },
-    "login": {
-      "codes": {
-        "NO_PASSWORD_OR_EMAIL_PROVIDED": "Please provide both a password and an email",
-        "INVALID_CREDENTIALS": "The password or the email were wrong",
-        "ACCOUNT_NOT_VERIFIED": "Your account wasn`t verified yet. You will receive an email as soon as your account is verified.",
-        "PASSWORD_NOT_CHANGED": "Please reset your password before logging in for the first time",
-        "SUCCESS": "SUCCESS"
-      }
-    },
-    "loading": {
-      "quotes": [
-        {
-          "text": "Education is the passport to the future, for tomorrow belongs to those who prepare for it today.",
-          "author": "Malcom X"
-        },
-        {
-          "text": "What would life be if we had no courage to attempt anything?",
-          "author": "Vincent Van Gogh"
-        }
-      ]
-    },
-    "profile": {
-      "personalData": "Personal Data",
-      "profile": "Profile",
-      "profileDataFields": {
-        "email": "E-mail",
-        "name": "Full Name"
-      },
-      "studentDataFields": {
-        "domain": "Domain",
-        "learningMode": "Learning Mode",
-        "degree": "Degree",
-        "studyProgram": "Study Program",
-        "currentGroup": "Current Group",
-        "currentYear": "Current Year",
-        "currentSemester": "Current Semester"
-      },
-      "studentData": "Student Data",
-      "grade": "Grades",
-      "studentGradeFields": {
-        "yearHeader": "Year",
-        "gradeHeader": "Grade"
-      }
-    },
-    "optionsLists": {
-      "createButton": "Create a new options list"
-    },
-    "accounts": {
-      "notVerified": {
-        "accountsListTitle": "Conturi neverificate",
-        "fileUploadLabel": ""
-      },
-      "students": {
-        "accountsListTitle": "Studenți",
-        "fileUploadLabel": "Importă informațiile studenților în format .xlsx"
-      },
-      "teachers": {
-        "accountsListTitle": "Profesori",
-        "fileUploadLabel": "Importă informațiile profesorilor în format .xlsx"
-      }
-    },
-    "admin": {
-      "accounts": {
-        "notVerified": {
-          "accountsListTitle": "Not Verified",
-          "fileUploadLabel": ""
-        },
-        "students": {
-          "accountsListTitle": "Students",
-          "fileUploadLabel": "Upload students' info excel file"
-        },
-        "teachers": {
-          "accountsListTitle": "Teachers",
-          "fileUploadLabel": "Upload teachers' info excel file"
-        }
-      },
-      "optionsLists": {
-
-      },
-      "courses": {
-        "buttons": {
-          "create": "Create a new course"
-        }  
-      },
-      "settings": {
-
-      }
-    }
-    
-  },
-  "molecules": {
-    "optionsListCard": {
-      "year": "Anul",
-      "semester": "Semestrul"
-    }
-  },
-  "saveButton": "Salvează modificările",
-  "excelButton": "Exportă ca .xlsx",
-  "syllabusButton": "Vezi fișa disciplinei"
+  "text": {
+    "firstSemester": "Semestrul I",
+    "secondSemester": "Semestrul al II-lea",
+    "year": "Anul"
+  }
 }
